# amr-robile-project

./: .gitignore  README.md  frames_2026-03-12_15.04.45.gv
src/: package.xml  setup.cfg  setup.py
src/amr_project_lvalet2s_yakter2s/: common.py  frontier_explorer.py  package.xml  path_motion_planner.py  setup.cfg  setup.py
src/amr_project_lvalet2s_yakter2s/amr_project_lvalet2s_yakter2s/: common.py  frontier_explorer.py  goal_sender_node.py  particle_filter_localization.py  path_motion_planner.py
src/amr_project_lvalet2s_yakter2s/config/: part1_params.yaml  part2_params.yaml  part3_params.yaml
src/amr_project_lvalet2s_yakter2s/launch/: amr_project.launch.py  part1.launch.py
src/amr_project_lvalet2s_yakter2s_part1/: global_planner_node.py  goal_sender_node.py  local_navigation_node.py  map_processing.py  planning_algorithms.py
src/config/: navigation_params.yaml  part1_params.yaml  part3_params.yaml
src/launch/: amr_project.launch.py  navigation_system.launch.py  part2.launch.py  part3.launch.py
src/resource/: amr_project_lvalet2s_yakter2s
